--- a/2/Lab-XSS-JavaScript/index1.html
+++ b/2/Lab-XSS-JavaScript/index1.html
@@ -41,12 +41,16 @@
     </div>
 </nav>
 
-<h1>Welcome to our website</h1>
-<h1 id="reflected"></h1>
+<h1>Welcome to our website <div style="display: inline-block;" id="reflected"></div> </h1>
+
 <div class="container pt-5">
 </div>
+
 <script>let xss = decodeURI(location.search.slice(5));
  document.getElementById("reflected").innerHTML = xss</script>
+ 
+ 
+ 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
